--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,4 +1,7 @@
-pandas
-matplotlib
-scikit-learn
-numpy
+import streamlit as st
+import pandas as pd
+import matplotlib.pyplot as plt
+from sklearn.linear_model import LinearRegression
+import numpy as np
+import os
+from datetime import datetime
